[gd_scene load_steps=9 format=3 uid="uid://dx1p8wbve8jt8"]

[ext_resource type="Script" path="res://scripts/basicEnemy.gd" id="1_npdr0"]
[ext_resource type="PackedScene" uid="uid://cnee1osoppwyp" path="res://assets/enemy_ufoRed.glb" id="2_tkc5l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_kltv4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_g3qpg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_pmrwx"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_tpkrk"]

[sub_resource type="Animation" id="Animation_672dr"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/enemy_ufoRed:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, -3.36358),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q5k3h"]
_data = {
"spawn": SubResource("Animation_672dr")
}

[node name="BasicEnemy" type="Node3D"]
script = ExtResource("1_npdr0")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("3_kltv4")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("4_g3qpg")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_tpkrk")

[node name="ToTravelling" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("5_pmrwx")
to = NodePath("../../Travelling")
event = &"toTravelling"

[node name="Travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_tpkrk")

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_tpkrk")

[node name="Dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_tpkrk")

[node name="Path3D" type="Path3D" parent="."]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
loop = false

[node name="enemy_ufoRed" parent="Path3D/PathFollow3D" instance=ExtResource("2_tkc5l")]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.25, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_q5k3h")
}

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_onSpawningStateEntered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Travelling" to="." method="_onTravellingStateProcessing"]
